14592 pwait(1) should never wait on its own PID Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Matt Barden <mbarden@tintri.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>